--- a/NLP/NLP_Hugging_Face.ipynb
+++ b/NLP/NLP_Hugging_Face.ipynb
@@ -4,220 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using Hugging Face Models"
+    "### Using Hugging Face Models NLP\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting transformers\n",
-      "  Downloading transformers-4.38.2-py3-none-any.whl.metadata (130 kB)\n",
-      "     ---------------------------------------- 0.0/130.7 kB ? eta -:--:--\n",
-      "     --------------------------- ----------- 92.2/130.7 kB 2.6 MB/s eta 0:00:01\n",
-      "     -------------------------------------- 130.7/130.7 kB 1.9 MB/s eta 0:00:00\n",
-      "Collecting filelock (from transformers)\n",
-      "  Downloading filelock-3.13.1-py3-none-any.whl.metadata (2.8 kB)\n",
-      "Collecting huggingface-hub<1.0,>=0.19.3 (from transformers)\n",
-      "  Downloading huggingface_hub-0.21.4-py3-none-any.whl.metadata (13 kB)\n",
-      "Collecting numpy>=1.17 (from transformers)\n",
-      "  Using cached numpy-1.26.4-cp310-cp310-win_amd64.whl.metadata (61 kB)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\prg\\ml_models\\.venv\\lib\\site-packages (from transformers) (24.0)\n",
-      "Collecting pyyaml>=5.1 (from transformers)\n",
-      "  Downloading PyYAML-6.0.1-cp310-cp310-win_amd64.whl.metadata (2.1 kB)\n",
-      "Collecting regex!=2019.12.17 (from transformers)\n",
-      "  Downloading regex-2023.12.25-cp310-cp310-win_amd64.whl.metadata (41 kB)\n",
-      "     ---------------------------------------- 0.0/42.0 kB ? eta -:--:--\n",
-      "     ---------------------------------------- 42.0/42.0 kB 2.0 MB/s eta 0:00:00\n",
-      "Collecting requests (from transformers)\n",
-      "  Using cached requests-2.31.0-py3-none-any.whl.metadata (4.6 kB)\n",
-      "Collecting tokenizers<0.19,>=0.14 (from transformers)\n",
-      "  Downloading tokenizers-0.15.2-cp310-none-win_amd64.whl.metadata (6.8 kB)\n",
-      "Collecting safetensors>=0.4.1 (from transformers)\n",
-      "  Downloading safetensors-0.4.2-cp310-none-win_amd64.whl.metadata (3.9 kB)\n",
-      "Collecting tqdm>=4.27 (from transformers)\n",
-      "  Downloading tqdm-4.66.2-py3-none-any.whl.metadata (57 kB)\n",
-      "     ---------------------------------------- 0.0/57.6 kB ? eta -:--:--\n",
-      "     ---------------------------------------- 57.6/57.6 kB 3.2 MB/s eta 0:00:00\n",
-      "Collecting fsspec>=2023.5.0 (from huggingface-hub<1.0,>=0.19.3->transformers)\n",
-      "  Downloading fsspec-2024.2.0-py3-none-any.whl.metadata (6.8 kB)\n",
-      "Collecting typing-extensions>=3.7.4.3 (from huggingface-hub<1.0,>=0.19.3->transformers)\n",
-      "  Using cached typing_extensions-4.10.0-py3-none-any.whl.metadata (3.0 kB)\n",
-      "Requirement already satisfied: colorama in c:\\prg\\ml_models\\.venv\\lib\\site-packages (from tqdm>=4.27->transformers) (0.4.6)\n",
-      "Collecting charset-normalizer<4,>=2 (from requests->transformers)\n",
-      "  Using cached charset_normalizer-3.3.2-cp310-cp310-win_amd64.whl.metadata (34 kB)\n",
-      "Collecting idna<4,>=2.5 (from requests->transformers)\n",
-      "  Using cached idna-3.6-py3-none-any.whl.metadata (9.9 kB)\n",
-      "Collecting urllib3<3,>=1.21.1 (from requests->transformers)\n",
-      "  Downloading urllib3-2.2.1-py3-none-any.whl.metadata (6.4 kB)\n",
-      "Collecting certifi>=2017.4.17 (from requests->transformers)\n",
-      "  Downloading certifi-2024.2.2-py3-none-any.whl.metadata (2.2 kB)\n",
-      "Downloading transformers-4.38.2-py3-none-any.whl (8.5 MB)\n",
-      "   ---------------------------------------- 0.0/8.5 MB ? eta -:--:--\n",
-      "   ---------------------------------------- 0.1/8.5 MB 5.1 MB/s eta 0:00:02\n",
-      "    --------------------------------------- 0.2/8.5 MB 2.1 MB/s eta 0:00:04\n",
-      "   - -------------------------------------- 0.3/8.5 MB 2.4 MB/s eta 0:00:04\n",
-      "   - -------------------------------------- 0.4/8.5 MB 2.4 MB/s eta 0:00:04\n",
-      "   -- ------------------------------------- 0.5/8.5 MB 2.1 MB/s eta 0:00:04\n",
-      "   -- ------------------------------------- 0.6/8.5 MB 2.2 MB/s eta 0:00:04\n",
-      "   --- ------------------------------------ 0.7/8.5 MB 2.1 MB/s eta 0:00:04\n",
-      "   --- ------------------------------------ 0.8/8.5 MB 2.1 MB/s eta 0:00:04\n",
-      "   ---- ----------------------------------- 0.9/8.5 MB 2.1 MB/s eta 0:00:04\n",
-      "   ---- ----------------------------------- 1.0/8.5 MB 2.1 MB/s eta 0:00:04\n",
-      "   ---- ----------------------------------- 1.0/8.5 MB 2.1 MB/s eta 0:00:04\n",
-      "   ----- ---------------------------------- 1.1/8.5 MB 1.9 MB/s eta 0:00:04\n",
-      "   ----- ---------------------------------- 1.2/8.5 MB 1.9 MB/s eta 0:00:04\n",
-      "   ------ --------------------------------- 1.4/8.5 MB 2.0 MB/s eta 0:00:04\n",
-      "   ------ --------------------------------- 1.5/8.5 MB 2.0 MB/s eta 0:00:04\n",
-      "   ------- -------------------------------- 1.5/8.5 MB 2.0 MB/s eta 0:00:04\n",
-      "   ------- -------------------------------- 1.6/8.5 MB 2.0 MB/s eta 0:00:04\n",
-      "   -------- ------------------------------- 1.7/8.5 MB 2.1 MB/s eta 0:00:04\n",
-      "   -------- ------------------------------- 1.8/8.5 MB 2.0 MB/s eta 0:00:04\n",
-      "   --------- ------------------------------ 1.9/8.5 MB 2.1 MB/s eta 0:00:04\n",
-      "   --------- ------------------------------ 2.0/8.5 MB 2.0 MB/s eta 0:00:04\n",
-      "   ---------- ----------------------------- 2.2/8.5 MB 2.1 MB/s eta 0:00:04\n",
-      "   ---------- ----------------------------- 2.3/8.5 MB 2.1 MB/s eta 0:00:03\n",
-      "   ----------- ---------------------------- 2.4/8.5 MB 2.1 MB/s eta 0:00:03\n",
-      "   ----------- ---------------------------- 2.5/8.5 MB 2.1 MB/s eta 0:00:03\n",
-      "   ------------ --------------------------- 2.6/8.5 MB 2.1 MB/s eta 0:00:03\n",
-      "   ------------ --------------------------- 2.7/8.5 MB 2.1 MB/s eta 0:00:03\n",
-      "   ------------- -------------------------- 2.8/8.5 MB 2.1 MB/s eta 0:00:03\n",
-      "   ------------- -------------------------- 2.9/8.5 MB 2.1 MB/s eta 0:00:03\n",
-      "   -------------- ------------------------- 3.0/8.5 MB 2.1 MB/s eta 0:00:03\n",
-      "   -------------- ------------------------- 3.1/8.5 MB 2.1 MB/s eta 0:00:03\n",
-      "   --------------- ------------------------ 3.2/8.5 MB 2.1 MB/s eta 0:00:03\n",
-      "   --------------- ------------------------ 3.4/8.5 MB 2.1 MB/s eta 0:00:03\n",
-      "   ---------------- ----------------------- 3.5/8.5 MB 2.1 MB/s eta 0:00:03\n",
-      "   ---------------- ----------------------- 3.6/8.5 MB 2.1 MB/s eta 0:00:03\n",
-      "   ----------------- ---------------------- 3.7/8.5 MB 2.1 MB/s eta 0:00:03\n",
-      "   ----------------- ---------------------- 3.8/8.5 MB 2.1 MB/s eta 0:00:03\n",
-      "   ------------------ --------------------- 3.9/8.5 MB 2.2 MB/s eta 0:00:03\n",
-      "   ------------------ --------------------- 4.1/8.5 MB 2.2 MB/s eta 0:00:03\n",
-      "   ------------------- -------------------- 4.1/8.5 MB 2.2 MB/s eta 0:00:03\n",
-      "   ------------------- -------------------- 4.2/8.5 MB 2.2 MB/s eta 0:00:02\n",
-      "   -------------------- ------------------- 4.3/8.5 MB 2.2 MB/s eta 0:00:02\n",
-      "   -------------------- ------------------- 4.4/8.5 MB 2.2 MB/s eta 0:00:02\n",
-      "   --------------------- ------------------ 4.5/8.5 MB 2.2 MB/s eta 0:00:02\n",
-      "   --------------------- ------------------ 4.6/8.5 MB 2.2 MB/s eta 0:00:02\n",
-      "   ---------------------- ----------------- 4.8/8.5 MB 2.2 MB/s eta 0:00:02\n",
-      "   ---------------------- ----------------- 4.9/8.5 MB 2.2 MB/s eta 0:00:02\n",
-      "   ----------------------- ---------------- 5.0/8.5 MB 2.2 MB/s eta 0:00:02\n",
-      "   ----------------------- ---------------- 5.1/8.5 MB 2.2 MB/s eta 0:00:02\n",
-      "   ------------------------ --------------- 5.1/8.5 MB 2.2 MB/s eta 0:00:02\n",
-      "   ------------------------ --------------- 5.2/8.5 MB 2.2 MB/s eta 0:00:02\n",
-      "   ------------------------ --------------- 5.3/8.5 MB 2.2 MB/s eta 0:00:02\n",
-      "   ------------------------- -------------- 5.4/8.5 MB 2.2 MB/s eta 0:00:02\n",
-      "   ------------------------- -------------- 5.5/8.5 MB 2.2 MB/s eta 0:00:02\n",
-      "   -------------------------- ------------- 5.6/8.5 MB 2.2 MB/s eta 0:00:02\n",
-      "   -------------------------- ------------- 5.7/8.5 MB 2.2 MB/s eta 0:00:02\n",
-      "   --------------------------- ------------ 5.8/8.5 MB 2.2 MB/s eta 0:00:02\n",
-      "   --------------------------- ------------ 5.9/8.5 MB 2.2 MB/s eta 0:00:02\n",
-      "   ---------------------------- ----------- 6.0/8.5 MB 2.2 MB/s eta 0:00:02\n",
-      "   ---------------------------- ----------- 6.2/8.5 MB 2.2 MB/s eta 0:00:02\n",
-      "   ----------------------------- ---------- 6.3/8.5 MB 2.2 MB/s eta 0:00:02\n",
-      "   ----------------------------- ---------- 6.3/8.5 MB 2.2 MB/s eta 0:00:01\n",
-      "   ------------------------------ --------- 6.5/8.5 MB 2.2 MB/s eta 0:00:01\n",
-      "   ------------------------------ --------- 6.5/8.5 MB 2.2 MB/s eta 0:00:01\n",
-      "   ------------------------------- -------- 6.6/8.5 MB 2.2 MB/s eta 0:00:01\n",
-      "   ------------------------------- -------- 6.7/8.5 MB 2.2 MB/s eta 0:00:01\n",
-      "   ------------------------------- -------- 6.8/8.5 MB 2.2 MB/s eta 0:00:01\n",
-      "   -------------------------------- ------- 7.0/8.5 MB 2.2 MB/s eta 0:00:01\n",
-      "   -------------------------------- ------- 7.0/8.5 MB 2.2 MB/s eta 0:00:01\n",
-      "   --------------------------------- ------ 7.1/8.5 MB 2.2 MB/s eta 0:00:01\n",
-      "   --------------------------------- ------ 7.2/8.5 MB 2.2 MB/s eta 0:00:01\n",
-      "   ---------------------------------- ----- 7.3/8.5 MB 2.2 MB/s eta 0:00:01\n",
-      "   ---------------------------------- ----- 7.5/8.5 MB 2.2 MB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 7.6/8.5 MB 2.2 MB/s eta 0:00:01\n",
-      "   ------------------------------------ --- 7.8/8.5 MB 2.2 MB/s eta 0:00:01\n",
-      "   ------------------------------------- -- 7.9/8.5 MB 2.2 MB/s eta 0:00:01\n",
-      "   ------------------------------------- -- 8.0/8.5 MB 2.2 MB/s eta 0:00:01\n",
-      "   -------------------------------------- - 8.1/8.5 MB 2.2 MB/s eta 0:00:01\n",
-      "   -------------------------------------- - 8.2/8.5 MB 2.2 MB/s eta 0:00:01\n",
-      "   -------------------------------------- - 8.3/8.5 MB 2.3 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  8.5/8.5 MB 2.3 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  8.5/8.5 MB 2.3 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 8.5/8.5 MB 2.2 MB/s eta 0:00:00\n",
-      "Downloading huggingface_hub-0.21.4-py3-none-any.whl (346 kB)\n",
-      "   ---------------------------------------- 0.0/346.4 kB ? eta -:--:--\n",
-      "   ------------- -------------------------- 112.6/346.4 kB 3.3 MB/s eta 0:00:01\n",
-      "   ---------------------------- ----------- 245.8/346.4 kB 2.5 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 346.4/346.4 kB 2.4 MB/s eta 0:00:00\n",
-      "Using cached numpy-1.26.4-cp310-cp310-win_amd64.whl (15.8 MB)\n",
-      "Downloading PyYAML-6.0.1-cp310-cp310-win_amd64.whl (145 kB)\n",
-      "   ---------------------------------------- 0.0/145.3 kB ? eta -:--:--\n",
-      "   ------------------------------- -------- 112.6/145.3 kB 3.3 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 145.3/145.3 kB 2.9 MB/s eta 0:00:00\n",
-      "Downloading regex-2023.12.25-cp310-cp310-win_amd64.whl (269 kB)\n",
-      "   ---------------------------------------- 0.0/269.5 kB ? eta -:--:--\n",
-      "   ---------------- ----------------------- 112.6/269.5 kB 6.8 MB/s eta 0:00:01\n",
-      "   ---------------------------------- ----- 235.5/269.5 kB 2.9 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 269.5/269.5 kB 2.4 MB/s eta 0:00:00\n",
-      "Downloading safetensors-0.4.2-cp310-none-win_amd64.whl (269 kB)\n",
-      "   ---------------------------------------- 0.0/269.5 kB ? eta -:--:--\n",
-      "   ---------------- ----------------------- 112.6/269.5 kB 3.2 MB/s eta 0:00:01\n",
-      "   ------------------------------ --------- 204.8/269.5 kB 2.5 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 269.5/269.5 kB 2.4 MB/s eta 0:00:00\n",
-      "Downloading tokenizers-0.15.2-cp310-none-win_amd64.whl (2.2 MB)\n",
-      "   ---------------------------------------- 0.0/2.2 MB ? eta -:--:--\n",
-      "   -- ------------------------------------- 0.1/2.2 MB 3.3 MB/s eta 0:00:01\n",
-      "   ---- ----------------------------------- 0.2/2.2 MB 2.4 MB/s eta 0:00:01\n",
-      "   ------ --------------------------------- 0.4/2.2 MB 2.5 MB/s eta 0:00:01\n",
-      "   -------- ------------------------------- 0.5/2.2 MB 2.6 MB/s eta 0:00:01\n",
-      "   --------- ------------------------------ 0.5/2.2 MB 2.6 MB/s eta 0:00:01\n",
-      "   ----------- ---------------------------- 0.6/2.2 MB 2.5 MB/s eta 0:00:01\n",
-      "   ----------- ---------------------------- 0.6/2.2 MB 2.5 MB/s eta 0:00:01\n",
-      "   ----------- ---------------------------- 0.6/2.2 MB 2.5 MB/s eta 0:00:01\n",
-      "   ------------- -------------------------- 0.7/2.2 MB 1.8 MB/s eta 0:00:01\n",
-      "   --------------- ------------------------ 0.9/2.2 MB 1.8 MB/s eta 0:00:01\n",
-      "   ----------------- ---------------------- 1.0/2.2 MB 1.9 MB/s eta 0:00:01\n",
-      "   ----------------- ---------------------- 1.0/2.2 MB 1.9 MB/s eta 0:00:01\n",
-      "   ------------------ --------------------- 1.0/2.2 MB 1.7 MB/s eta 0:00:01\n",
-      "   ------------------- -------------------- 1.1/2.2 MB 1.7 MB/s eta 0:00:01\n",
-      "   --------------------- ------------------ 1.2/2.2 MB 1.7 MB/s eta 0:00:01\n",
-      "   ----------------------- ---------------- 1.3/2.2 MB 1.7 MB/s eta 0:00:01\n",
-      "   ------------------------- -------------- 1.4/2.2 MB 1.8 MB/s eta 0:00:01\n",
-      "   -------------------------- ------------- 1.5/2.2 MB 1.8 MB/s eta 0:00:01\n",
-      "   ----------------------------- ---------- 1.6/2.2 MB 1.8 MB/s eta 0:00:01\n",
-      "   ------------------------------- -------- 1.7/2.2 MB 1.8 MB/s eta 0:00:01\n",
-      "   --------------------------------- ------ 1.8/2.2 MB 1.9 MB/s eta 0:00:01\n",
-      "   ---------------------------------- ----- 1.9/2.2 MB 1.9 MB/s eta 0:00:01\n",
-      "   ------------------------------------ --- 2.0/2.2 MB 1.9 MB/s eta 0:00:01\n",
-      "   -------------------------------------- - 2.1/2.2 MB 1.9 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  2.2/2.2 MB 1.9 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 2.2/2.2 MB 1.9 MB/s eta 0:00:00\n",
-      "Downloading tqdm-4.66.2-py3-none-any.whl (78 kB)\n",
-      "   ---------------------------------------- 0.0/78.3 kB ? eta -:--:--\n",
-      "   ---------------------------------------- 78.3/78.3 kB 4.5 MB/s eta 0:00:00\n",
-      "Downloading filelock-3.13.1-py3-none-any.whl (11 kB)\n",
-      "Using cached requests-2.31.0-py3-none-any.whl (62 kB)\n",
-      "Downloading certifi-2024.2.2-py3-none-any.whl (163 kB)\n",
-      "   ---------------------------------------- 0.0/163.8 kB ? eta -:--:--\n",
-      "   --------------------------- ------------ 112.6/163.8 kB 3.3 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 163.8/163.8 kB 2.5 MB/s eta 0:00:00\n",
-      "Using cached charset_normalizer-3.3.2-cp310-cp310-win_amd64.whl (100 kB)\n",
-      "Downloading fsspec-2024.2.0-py3-none-any.whl (170 kB)\n",
-      "   ---------------------------------------- 0.0/170.9 kB ? eta -:--:--\n",
-      "   --------------------------------- ------ 143.4/170.9 kB 2.8 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 170.9/170.9 kB 2.6 MB/s eta 0:00:00\n",
-      "Using cached idna-3.6-py3-none-any.whl (61 kB)\n",
-      "Using cached typing_extensions-4.10.0-py3-none-any.whl (33 kB)\n",
-      "Downloading urllib3-2.2.1-py3-none-any.whl (121 kB)\n",
-      "   ---------------------------------------- 0.0/121.1 kB ? eta -:--:--\n",
-      "   ------------------------------------- -- 112.6/121.1 kB 2.2 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 121.1/121.1 kB 1.8 MB/s eta 0:00:00\n",
-      "Installing collected packages: urllib3, typing-extensions, tqdm, safetensors, regex, pyyaml, numpy, idna, fsspec, filelock, charset-normalizer, certifi, requests, huggingface-hub, tokenizers, transformers\n",
-      "Successfully installed certifi-2024.2.2 charset-normalizer-3.3.2 filelock-3.13.1 fsspec-2024.2.0 huggingface-hub-0.21.4 idna-3.6 numpy-1.26.4 pyyaml-6.0.1 regex-2023.12.25 requests-2.31.0 safetensors-0.4.2 tokenizers-0.15.2 tqdm-4.66.2 transformers-4.38.2 typing-extensions-4.10.0 urllib3-2.2.1\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pip install transformers"
+    "pip install transformers\n"
    ]
   }
  ],
