--- a/NLP/NLP_Hugging_Face.ipynb
+++ b/NLP/NLP_Hugging_Face.ipynb
@@ -15,6 +15,16 @@
    "source": [
     "pip install transformers\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers.utils import logging\n",
+    "logging.set_verbosity_error()"
+   ]
   }
  ],
  "metadata": {
